--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,8 @@ javac.classpath=\
     ${file.reference.smtp.jar}:\
     ${file.reference.taglibs-standard-impl-1.2.5-2.jar}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
