--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <!-- PARAMETRI DA CONFIGURARE -->
     <context-param>
+        <param-name>port</param-name>
+        <param-value>8443</param-value>
+    </context-param>
+    <context-param>
         <param-name>dburl</param-name>
         <param-value>jdbc:derby://localhost:1527/db1</param-value>
     </context-param>
