--- a/src/java/Resources/string.properties
+++ b/src/java/Resources/string.properties
@@ -2,3 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+refine=
+most.visited=
+near=
+place=
